[metadata]
name = python-neutron-pd-driver
summary = A prefix delegation driver written using pure python with no dependencies for use with OpenStack Neutron.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    neutron-pd-agent = python_neutron_pd_driver.agent:main
neutron.agent.linux.pd_drivers =
    neutron_pd_agent = python_neutron_pd_driver.driver:PDDriver

[files]
packages =
    python_neutron_pd_driver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = python_neutron_pd_driver/locale
domain = python-neutron-pd-driver

[update_catalog]
domain = python-neutron-pd-driver
output_dir = python_neutron_pd_driver/locale
input_file = python_neutron_pd_driver/locale/python-neutron-pd-driver.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = python_neutron_pd_driver/locale/python-neutron-pd-driver.pot
